Add ingredients and steps to cheesecake.html

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -7,6 +7,34 @@
 
     <body>
         <h1>Cheesecake</h1>
-        <a href="..index.html">Home</a>
+        <img src="https://media.istockphoto.com/id/1167344045/photo/cheesecake-slice-new-york-style-classical-cheese-cake.jpg?s=612x612&w=0&k=20&c=y3eh7cFEefAYxB_5Ow2n1OJZML_PqFOdnB5Z9nvXdgw=" alt="Delicious slice of cheesecake">
+        
+        <h2>Description</h2>
+        <p>This is a lighter, healthier cheesecake with a nutty, slightly sweet crust and a creamy, protein-rich filling. The crust is made from crushed nuts and a touch of natural sweetener, giving it a firm but flavorful base. The filling uses low-fat cream cheese or Greek yogurt, lightly sweetened and flavored with vanilla and optional lemon for brightness. You can bake it or chill it to set, and top it with fresh fruit or a drizzle of dark chocolate for extra flavor. It’s rich and creamy like traditional cheesecake but lighter and less sugary.</p>
+                    
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 cup almond flour</li>
+            <li>2 tbsp coconut oil, melted</li>
+            <li>1–2 tbsp maple syrup or honey</li>
+            <li>2 cups plain Greek yogurt (full-fat or 2%)</li>
+            <li>8 oz cream cheese, softened (can use light cream cheese)</li>
+            <li>1/3 cup honey or maple syrup</li>
+            <li>2 tsp vanilla extract</li>
+            <li>2 large eggs</li>
+        </ul>
+
+        <h4>Steps</h4>
+        <ol>
+            <li>Preheat oven to 325°F (160°C).</li>
+            <li>Mix almond flour, melted coconut oil, and maple syrup to make crust. Press into a greased 8-inch springform pan.</li>
+            <li>In a bowl, beat cream cheese until smooth. Add Greek yogurt, honey, vanilla, and eggs. Mix until smooth.</li>
+            <li>Pour filling over crust. Smooth the top with a spatula.</li>
+            <li>Bake 25–30 minutes, or until edges are set and center slightly jiggles.</li>
+            <li>Cool at room temp for 30 min, then refrigerate 2–3 hours.</li>
+            <li>Top with fresh berries before serving.</li>
+        </ol>
+
+        <a href="../index.html">Home</a>
     </body>
 </html>
