Add more recipes and update index.html

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Cheesecake Recipes</title>
+        <title>Greek Yogurt Cheesecake Recipe</title>
     </head>
 
     <body>
-        <h1>Cheesecake</h1>
+        <h1>Greek Yogurt Cheesecake</h1>
         <img src="https://media.istockphoto.com/id/1167344045/photo/cheesecake-slice-new-york-style-classical-cheese-cake.jpg?s=612x612&w=0&k=20&c=y3eh7cFEefAYxB_5Ow2n1OJZML_PqFOdnB5Z9nvXdgw=" alt="Delicious slice of cheesecake">
         
         <h2>Description</h2>
@@ -24,7 +24,7 @@
             <li>2 large eggs</li>
         </ul>
 
-        <h4>Steps</h4>
+        <h3>Steps</h3>
         <ol>
             <li>Preheat oven to 325°F (160°C).</li>
             <li>Mix almond flour, melted coconut oil, and maple syrup to make crust. Press into a greased 8-inch springform pan.</li>
